Fix: site name on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,7 @@ h3 {
     min-width: initial;
     border: none;
   }
-
+  
   .content-header h1 {
     font-size: xx-large;
   }
@@ -161,6 +161,15 @@ h6 {
   font-weight: bold;
   color: var(--foreground-primary);
   text-decoration: none;
+}
+
+@media only screen and (max-width: 1000px) {
+  .site-name a {
+    font-size: larger;
+    font-weight: bold;
+    color: var(--foreground-primary);
+    text-decoration: none;
+  }
 }
 
 .footer {
@@ -459,4 +468,8 @@ blockquote p {
   background-color: var(--background-secondary);
   color: var(--foreground-primary);
   border-radius: 4px;
+}
+
+.horizontal-grid {
+
 }
